@@ -3,6 +3,11 @@ CHANGES
 
 2015-01-12 (nb)
 
+Added MIT License info, added LICENSE.txt file. Added licensing info to the source code file.
+
+
+2015-01-12 (nb)
+
 Updated RESEARCH and TODO files.
 
 
